--- a/main.html
+++ b/main.html
@@ -11,6 +11,16 @@
     <script type="text/javascript" src="./script.js">
 </script>
 
+	<div id = "flowers photos"
+		<h1 id = "f1">Flowers photos</h1>
+		<p>These are some pcitures of lovely flowers.</p>
+	</div>
+
+	<div id = "roses photos"
+		<h1 id = "f2">Roses photos</h1>
+		<p>These are some pcitures of lovely roses.</p>
+	</div>
+	
 </body>
 
 </html>
