--- a/main.html
+++ b/main.html
@@ -11,12 +11,12 @@
     <script type="text/javascript" src="./script.js">
 </script>
 
-	<div id = "flowers photos"
+	<div id = "Flowers photos"
 		<h1 id = "f1">Flowers photos</h1>
 		<p>These are some pcitures of lovely flowers.</p>
 	</div>
 
-	<div id = "roses photos"
+	<div id = "Roses photos"
 		<h1 id = "f2">Roses photos</h1>
 		<p>These are some pcitures of lovely roses.</p>
 	</div>
