--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+<main>
 	<div id = "Flowers photos"
 		<h1 id = "f1">Flowers photos</h1>
 		<p>These are some pcitures of lovely flowers.</p>
@@ -20,7 +20,7 @@
 		<h1 id = "f2">Roses photos</h1>
 		<p>These are some pcitures of lovely roses.</p>
 	</div>
-	
+</main>
 </body>
 
 </html>
